# remote-assist

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: architecture.md  performance-diagnostics.md  protocol.md
src/: RemoteAssist.manifest  RemoteAssist.rc  main.cpp
src/agent/: Agent.cpp  Agent.h  Capture.cpp  Capture.h  DesktopAccess.cpp  DesktopAccess.h  EncoderMf.cpp  EncoderMf.h  Input.cpp  Input.h
src/common/: Config.cpp  Config.h  InitialPasswordChannel.cpp  InitialPasswordChannel.h  Log.cpp  Log.h  Path.cpp  Path.h  RuntimeNames.h  ServiceInstallSecurity.cpp  ServiceInstallSecurity.h  StreamQuality.h
src/net/: ControllerHandoff.h  H264FlowControl.h  HttpWsServer.cpp  HttpWsServer.h
src/service/: ProcessLauncher.cpp  ProcessLauncher.h  ServiceHost.cpp  ServiceHost.h
src/setup/: SetupDialog.cpp  SetupDialog.h
src/tray/: TrayApp.cpp  TrayApp.h
tests/: ConfigTests.cpp  StreamQualityTests.cpp
tools/: install.bat
web/: app.css  app.js  index.html
